--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "postinstall": "pip3 install -r requirements.txt",
+    "postinstall": "pip3 install -r requirements.txt"
   },
   "repository": {
     "type": "git",
